fix bad auth loader. merge migrations. pass data from email to compose
