# server/docs/swagger.yaml
@@ -29,7 +29,7 @@ definitions:
           $ref: '#/definitions/PersonInfo'
         type: array
       replyTo:
-        type: string
+        $ref: '#/definitions/PersonInfo'
       sender:
         $ref: '#/definitions/PersonInfo'
       snippet:
@@ -49,7 +49,6 @@ definitions:
     - messageId
     - receivedAt
     - receiver
-    - replyTo
     - sender
     - snippet
     - subject
@@ -108,6 +107,18 @@ paths:
               $ref: '#/definitions/GmailEntry'
             type: array
       summary: List the inbox
+      tags:
+      - email
+  /gmail/message/:messageId:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/GmailEntry'
+      summary: Get the basic information about a message
       tags:
       - email
   /gmail/message/:messageId/contents:
