# server/main.go
@@ -49,6 +49,7 @@ func main() {
 	// TODO: maybe this is just another list query? they return basically the same thing
 	r.GET("/api/gmail/thread/:threadId", ListThread)
 	r.GET("/api/gmail/message/:messageId/contents", GetMessageContents)
+	r.GET("/api/gmail/message/:messageId", GetMessage)
 
 	// Start server on port 8080 (default)
 	// Server will listen on 0.0.0.0:8080 (localhost:8080 on Windows)
